# negative-mass-simulator

./: .gitmodules  CMakeLists.txt  Export.cpp  Export.h  README.md  Setup.cpp  Setup.h  Simulator.cpp  Simulator.h  main.cpp
mass-simulator-win/: mass-simulator-win.sln  packages.config
